@@ -169,6 +169,8 @@
 	$strDeathCert		= "Death Certified?";
 	$strMarriageCert	= "Marriage Certified?";
 	$strNewPerson		= "a new person";
+	$strPedigree		= "pedigree";
+	$strToDetails		= "to details";
 
 //=====================================================================================================================
 //  error definitions
