@@ -1,3 +1,4 @@
+	Pedigree page added
 	Wrapper around mysql_connect & imagecreatetruecolor
 	GedCom import added (experimental)
 	All fields are now editable
